# kolaBiBot

./: .env-dev  .env-prod  .gitignore  AGENTS.md  DEV.org  MANUAL.org  README.org  README.rst  docker-compose.postgres.yml  done.org  env.sh  journal.org  load_env.sh  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  run_kola.py  setup.py
Docs/: RUNTIME_COMMAND_PORT_PLAN.org
Orders/: pi_xbtusd_sell_plus1_tail_0p5.tsv  xbt_test.tsv
archives/getKrakenOrderBook/: setup.py
archives/runtime/: multi_kola.py  run_multi_kola.py
docker/postgres/: kolabi-postgres.env.example
kola/core/: bargain.py  models.py  types.py
kola/exchanges/: __init__.py  binance_adapter.py
kolaBitMEXBot/: multi_kola.py
kolaBitMEXBot/kola/: bargain.py
kolaBot/: multi_kola.py  run_multi_kola.py
kolaBot/kola/: bargain.py  chronos.py  exchange.py  settings.py
kolabi/: __init__.py
kolabi/bargain/: __init__.py  cli.py  smoke.py
kolabi/bot/: __init__.py  __main__.py  chronos.py  domain.py  dragon.py  exchange_routes.py  fresh_run.py  horus.py  ids.py  indicators.py  isis.py  janus.py  ogun_executor.py  orange.py  order_building.py  order_codes.py  pair_cycle.py  persistence.py  pricing.py  run_report.py  runtime_policy.py  service.py  strategy_runtime.py  tail_tracking.py  telemetry.py
kolabi/kraken_contract/: __init__.py  futures.py
kolabi/openapi/: __init__.py
logs/: .gitignore
orders/: EXAMPLE.org  advers.tsv  advers_direct.tsv  bmm_xbt.tsv  chained_xbt.tsv  demo_ada.org  demo_ada.tsv  demo_cross_exchange_chain.tsv  demo_kraken_xbt.org  demo_kraken_xbt.tsv  krf_ada.tsv  krkf.tsv  kxbtusd.tsv  mm_xbt.tsv  new_parse_grammar.tsv  pi_xbtusd_sell_plus1_tail_0p5.tsv  rep_xbt.tsv  xbt_test.tsv
scripts/: draw_models.sh  kolabi-fresh-run  kolabi-run-report  kolabidb  models_to_exclude.txt
tests/: CHRONOS_SUPERVISOR_TDD_TEMPLATE.org  GUIDE.org  ISIS_FUNCTIONAL_CORE_TDD_RULES.org  JANUS_TRANSLATION_TDD_QUESTIONS.org  JANUS_TRANSLATION_TDD_RULES.org  OGUN_EXECUTION_TDD_QUESTIONS.org  OGUN_EXECUTION_TDD_RULES.org  STRATEGY_LAYER_TDD_RULES.org  conftest.py  test_config.py  test_kraken_cli.py  test_kraken_smoke.py
(+159 files in other folders)
